add init and openie command